# shadow-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  main.rs
.github/: dependabot.yml
.github/workflows/: audit.yml  check.yml  main.yml  publish.yml
example_no_std/: Cargo.toml  rust-toolchain.toml
example_no_std/.cargo/: config.toml
example_no_std/src/: main.rs
example_shadow/: Cargo.toml  build.rs
example_shadow/src/: main.rs
example_shadow_hook/: .gitignore  Cargo.toml  build.rs
example_shadow_hook/src/: main.rs
example_wasm/: Cargo.toml
example_wasm/src/: lib.rs
examples/: builtin_fn.rs  builtin_method.rs
shadow-rs/: Cargo.toml
shadow-rs-consumer/: Cargo.toml
shadow-rs-consumer/src/: lib.rs
shadow-rs/src/: ci.rs  date_time.rs  env.rs  gen_const.rs  lib.rs
src/: build.rs  build_fn.rs  channel.rs  ci.rs  data_time.rs  date_time.rs  env.rs  err.rs  gen_const.rs  git.rs  hook.rs  lib.rs  main.rs  shadow.rs  time.rs
src/util/: match_dep.rs  mod.rs
