[package]
name = "shadow-rs"
version = "0.26.1"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2021"
description = "A build-time information stored in your rust project"
keywords = ["cargo", "build-script", "build", "shadow", "compile"]
readme = "README.md"
categories = ["development-tools", "development-tools::build-utils"]
repository = "https://github.com/baoyachi/shadow-rs"
documentation = "https://docs.rs/shadow-rs"
homepage = "https://github.com/baoyachi/shadow-rs"
license = "MIT AND Apache-2.0"
exclude = ["shadow-rs.png", "build_module.png"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
is_debug = "1.0.1"
const_format = "0.2.22"
time = { version = "0.3.11", features = ["formatting", "local-offset", "parsing"] }


#! Optional Dependencies:

## Use `libgit2` as a backend for git operations
git2 = { version = "0.18.0", default-features = false, optional = true }

## Better support for querying the local system time
tzdb = { version = "0.6.0", optional = true, default-features = false, features = ["local"] }

document-features = { version = "0.2", optional = true }

[features]
default = ["git2", "tzdb"]

[dev-dependencies]
winnow = "0.6"

[workspace]
members = ["example_shadow", "example_shadow_hook", "example_wasm"]
