[package]
name = "example_no_std"
version = "0.1.8"
authors = ["baoyachi <liaoymxsdl@gmail.com>", "mchodzikiewicz <mchodzikiewicz@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-rs-consumer = { path = "../shadow-rs-consumer" }
log = "0.4.22"

[build-dependencies]
shadow-rs = { path = "../shadow-rs", default-features = false }
