[package]
name = "example_no_std"
version = "0.1.8"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
	"esp32c3",
	"exception-handler",
	"panic-handler",
	"println",
] }

esp-hal = { version = "0.22.0", features = [
	"esp32c3",
] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
shadow-rs = { path = "../", default-features = false }
log = "0.4.22"

[build-dependencies]
shadow-rs = { path = "../", features = ["no_std"] }
