[package]
name = "example_shadow"
version = "0.1.8-beta3"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
#shadow-rs = "0.5"
shadow-rs = {path="../"}

[build-dependencies]
#shadow-rs = "0.5"
shadow-rs = {path="../"}