[package]
name = "example_shadow"
version = "0.1.8-beta3"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.1"
shadow-rs = { path = "../shadow-rs",features = ["metadata"] }

[build-dependencies]
shadow-rs = { path = "../shadow-rs" }

# Test cargo-clippy. For more detailed information about the issue, visit: https://github.com/baoyachi/shadow-rs/issues/151
[lints.clippy]
non_ascii_literal = "deny"
print_stdout = "deny"
needless_raw_strings = "deny"
needless_raw_string_hashes = "deny"