[package]
name = "example_shadow_hook"
version = "0.1.8-beta3"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-rs = { path = "../shadow-rs" }

[build-dependencies]
shadow-rs = { path = "../shadow-rs" }
