[package]
name = "example_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
shadow-rs = { path = "../shadow-rs", default-features = false, features = ["tzdb"] }


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
