[package]
name = "example_wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde-wasm-bindgen = "0.5"
serde_json = "1.0.108"
wasm-bindgen = "0.2.92"
shadow-rs = { path = "../", default-features = false, features = ["tzdb"] }

[build-dependencies]
shadow-rs = { path = "../", default-features = false, features = ["tzdb"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
